<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wifisignal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity_wifistrength">MainActivity_wifistrength</string>
    <string name="signal">Wifi Connection</string>
    <string name="title_activity_database">Database</string>
    <string name="Button1">Click me</string>
    <string name="Button2">Train</string>
    <string name="Button3">Locate</string>
    <string name="Room_Number">Room Number</string>
    <string name="title_activity_train">Train</string>
    <string name="Button4">Wrong Place?</string>
    <string name="Button5">Submit</string>
    <string name="title_activity_locate">Locate</string>
    <string name="title_activity_list_wifi">ListWifiActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_database__locate">Database_Locate</string>
    <string name="title_activity_list_wifi_activity__locate">ListWifiActivity_Locate</string>
    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_tab_swipe">TabSwipe</string>
    <string name="title_activity_first_fragment">FirstFragment</string>
    <string name="title_activity_second_fragment">SecondFragment</string>
    <string name="title_activity_third_fragment">ThirdFragment</string>

</resources>
