<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gray"
    android:gravity="center">
    
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/textStatus"
            android:text="@string/signal" />

        <Button
            android:background="@drawable/red_button"
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignBaseline="@+id/editText1"
            android:layout_alignBottom="@+id/editText1"
            android:layout_toRightOf="@+id/editText1"
            android:onClick="train"
            android:text="@string/Button2"
            style="@style/button_text" />

        <EditText
            android:background="@drawable/oval"
            android:id="@+id/editText1"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_alignLeft="@+id/button3"
            android:layout_below="@+id/textStatus"
            android:hint="@string/Room_Number"
             />

        <Button
            android:background="@drawable/green_button"
            android:id="@+id/button3"
            android:layout_width="352dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button2"            
            android:onClick="locate"
            android:text="@string/Button3"
            style="@style/button_text1" />

</RelativeLayout>

